# samdul97food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html
src/samdul97food/: .main.py.swp  main.py
